# swagger.json
@@ -19,6 +19,173 @@
   ],
   "schemes": ["http"],
   "consumes": ["application/json"],
-  "produces": ["application/json"]
+  "produces": ["application/json"],
+  "components": {
+    "schemas": {
+      "user": {
+        "properties": {
+          "company": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string"
+          },
+          "first_name": {
+            "type": "string"
+          },
+          "last_name": {
+            "type": "string"
+          },
+          "mobile_number": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string",
+            "uniqueItems": true
+          },
+          "password": {
+            "type": "string"
+          },
+          "profile_image": {
+            "type": "string"
+          }
+        },
+        "user": {
+          "type": "array",
+          "$ref": "#/components/schemas/user"
+        }
+      }
+    }
+  },
+  "paths": {
+    "/api/v1/user": {
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get all users in system",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/user"
+            }
+          }
+        }
+      }
+    },
+    "/api/v1//user": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "Create a new user",
+        "description": "Create new user in system",
+        "parameters": [
+          {
+            "name": "user",
+            "in": "body",
+            "description": "User that we want to create",
+            "schema": {
+              "$ref": "#/components/schemas/user"
+            }
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "New user is created",
+            "schema": {
+              "$ref": "#/components/schemas/user"
+            }
+          }
+        }
+      }
+    },
+    "responses": {
+      "200": {
+        "description": "The response",
+        "schema": {
+          "$ref": "#/components/schemas/user"
+        }
+      }
+    },
+    "/api/v1/user/{id}": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "description": "ID of user that we want to find",
+          "type": "integer"
+        }
+      ],
+      "put": {
+        "summary": "Update user with give ID",
+        "tags": ["Users"],
+        "parameters": [
+          {
+            "name": "user",
+            "in": "body",
+            "description": "User with new values of properties",
+            "schema": {
+              "$ref": "#/components/schemas/user"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User is updated",
+            "schema": {
+              "$ref": "#/components/schemas/user"
+            }
+          }
+        }
+      }
+    },
+    "delete": {
+      "summary": "Delete user with given ID",
+      "tags": ["Users"],
+      "responses": {
+        "200": {
+          "description": "User is deleted",
+          "schema": {
+            "$ref": "#/definitions/User"
+          }
+        }
+      }
+    },
+    "definitions": {
+      "user": {
+        "properties": {
+          "company": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string"
+          },
+          "first_name": {
+            "type": "string"
+          },
+          "last_name": {
+            "type": "string"
+          },
+          "mobile_number": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string",
+            "uniqueItems": true
+          },
+          "password": {
+            "type": "string"
+          },
+          "profile_image": {
+            "type": "string"
+          }
+        },
+        "user": {
+          "type": "array",
+          "$ref": "#/components/schemas/user"
+        }
+      }
+    }
   
+}
 }
